new product added

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- /.row -->
 
 
-       	<!-- Projects Row 
+       	<!-- Projects Row -->
         <div class="row products">
 
             <div class="col-md-4 portfolio-item">
@@ -173,7 +173,7 @@
             </div>
 
         </div>
-           /.row -->
+        <!-- /.row -->
 
 
         <!-- Projects Row --> 
