--- a/product-15.html
+++ b/product-15.html
@@ -101,18 +101,18 @@
 		<h3>Гісторыя і апісанне</h3>
               
 
-<p>DIY-цішотка "free software" або цішоткі з касмічнымі захопнікамі прысвечаны васьмі бітнай <a href="http://www.pacxon4u.com/space-invaders/">гульні</a>. Мем стаў шырока распаўсюджаны сярод рэтра гульнявых гікаў па ўсяму свету.</p>
+<p>DIY-цішотка "I <3 free software" прысвечаны свабоднаму праграмнаму забеспячэнню. Зараз вы можаце замовіць цішоткі белага і чорнага колера з надпісамі: I use/study/share/edit free software</p>
 
-<p>На наш погляд касмічныя госці могуць несці не толькі двіжуху на клавіятуры, але цікавыя мэссэджы: be different, for free software і іншыя. Зараз вы можаце замовіць цішоткі белага і чорнага колера з надпісамі і колерамі, як на выявах.</p>
+<p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свадобна запускаць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свободнай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па чацвертае, вы можаце распаўсюджваць змененую праграму.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/blob/master/space-invader-for-free-software-2.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> або <a href="https://github.com/rizomaa/prints/blob/master/space-invader-be-different.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі 2</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/blob/master/free-software-use.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Як звычайна: лепей прыглядзець для сябе памерчык і насіць да дыр.</li>
-			<li>Не чакаць лета. Набыць на памер болей і насіць паверх шфэдара. Трохі трэшавата можа выглядаць, але гікам можна.</li>
-			<li>Калі вы пагуляеце ў саму гулню  http://www.pacxon4u.com/space-invaders/ магчыма зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі.</li>
+			<li>Як звычайна: лепей прыглядзець для сябе памерчык загаддзя і насіць да дыр. Як бачна на фота можна і зімой =)</li>
+			<li>Не чакаць лета. Набыць на памер болей і насіць паверх шфэдара. Часам гэта можа выглядаць даволі няшна.</li>
+			<li>паспрабуйце разам з набыццём цішоткі, пераставіць сабе аперацыйную сістэмы. Каманда з <a href="https://it.falanster.by/" target="_blank">Лічбавай майстэрні дапаможа</a></li>
 		</ul>
 
 		<p> Памер і колер цішоткі: пазначайце ў замове. </p>
