--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="набыць тавары для гіка, нэрда, айцішніка: налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons">
-    <meta name="author" content="налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons">
+    <meta name="description" content="налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, тавары для гіка, нэрда, айцішніка: налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, цішоткі">
+    <meta name="author" content="">
 
     <title>Гік-лаўка. Тавары для гіка ад супольнасці Фаланстэра</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
