--- a/product-15.html
+++ b/product-15.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="адкрыты код, open source, shell, bash, linux, лінукс, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, принты, гики, 8 бит, 8 біт, 8 bit, space invader belarus, мемы, t-shirt, space invader">
+    <meta name="description" content="цішоткі, майкі, free software, адкрыты код, open source, shell, bash, linux, лінукс, гік, гик, принты, на дзень народзінаў, на свята, майкі, цішоткі, саколкі, майки, прынты, принты, гики, 8 бит, 8 біт, 8 bit, space invader belarus, мемы, t-shirt, space invader">
 
     <title>Гік-лаўка - DIY-цішоткі free software</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
