--- a/product-15.html
+++ b/product-15.html
@@ -103,7 +103,7 @@
 
 <p>DIY-цішотка "I <3 free software" прысвечаны свабоднаму праграмнаму забеспячэнню. Зараз вы можаце замовіць цішоткі белага і чорнага колера з надпісамі: I use/study/share/edit free software</p>
 
-<p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свадобна запускаць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свободнай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па чацвертае, вы можаце распаўсюджваць змененую праграму.</p>
+<p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свабодна запускаць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свободнай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па чацвертае, вы можаце распаўсюджваць змененую праграму.</p>
 
 <h4><a href="https://github.com/rizomaa/prints/blob/master/free-software-use.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>Зыходнікі</a> + шрыфт Joystik</h4>
 
