corrected spelling on product-6/9/15 pages

--- a/product-6.html
+++ b/product-6.html
@@ -102,14 +102,14 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Налепкі для адмінаў, сецівікоў і супольнасці за аўтаномны, незалежны інтэрнэт.</p>
-		<p>Яны ствараліся падчас нашых пілотных хапускаў мэш сеткі ў 2015 годзе. Але і зараз пасланне сугучны з каштоўнасямі якія нясуць дэцэнтралізаваныя тэхналогіі.</p>
+                <p>Налепкі для адмінаў, сецевікоў і супольнасцей за аўтаномны, незалежны інтэрнэт.</p>
+		<p>Яны ствараліся падчас нашых пілотных запускаў мэш-сеткі ў 2015 годзе. Але і зараз пасланнi сугучны каштоўнасцям, якія нясуць дэцэнтралізаваныя тэхналогіі.</p>
 		<h4><a href="https://github.com/beMesh/stickers/tree/master/1" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
 			<li>Зрабіце з іх магніцікі</li>
-			<li>Падарыце сябрам, якія наладжваюць сеткі, адміняць сервакі, або любяць перастаўляць сістэмы.</li>
+			<li>Падарыце сябрам, якія наладжваюць сеткі, адміняць сервакі, або любяць перастаўляць сістэмы</li>
 		</ul>
 		<p> Памер налепкі: 5х5см </p>
 
