--- a/product-9.html
+++ b/product-9.html
@@ -100,13 +100,13 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Ідэя пірацкіх плакатаў нарадзілася ў 2013 годзе, калі мы ўсвядомілі важнасць прыватнасці, свабоднага цыркулявання ведаў і іншыя выклікі у лічбавую эпоху. Выстава плакатаў абывалася на базе Фаланстэра, а таксама ў месцах правядзення мерапрыемстваў. Плакаты напоўнены рознымі слоганамі, як "Права - аўтару", "Чысці кэш браузера", "Пераможам - капірайт" і іншыя. Зараз вы можаце набыць сабе падобны плакат.</p>
+                <p>Ідэя пірацкіх плакатаў нарадзілася ў 2013 годзе, калі мы ўсвядомілі важнасць прыватнасці, свабоднага цыркулявання ведаў і іншыя выклікі лічбавай эпохі. Выстава плакатаў адбывалася на базе Фаланстэра, а таксама ў месцах правядзення мерапрыемстваў. Плакаты напоўнены рознымі слоганамі, такімі як "Вернем права аўтару", "Чысці кэш браўзера", "Пераможам капірайт" і іншымі. Зараз вы можаце набыць сабе падобныя плакаты.</p>
 		<h4><a href="https://github.com/svetit/2014-2017-posters-pirates-campaign/tree/master/posters_by" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Павесіць на сцяну або падкласці пад оргшкло працоўнага стала</li>
 			<li>Мадыфікаваць і расшарыць ідэю новага плаката для іншых</li>
-			<li>Падарыць сябрам, якія падзяляюць агульныя погляды.</li>
+			<li>Падарыць сябрам, якія падзяляюць агульныя погляды на праблему</li>
 		</ul>
 
 		<p><strong>Памер плаката:</strong> А2 </p>
