work on fridays

--- a/tos.html
+++ b/tos.html
@@ -108,7 +108,7 @@
 	<li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
 	<li>Пасля мы звяжамся з вамі і пацвердзім наяўнасць тавараў.</li>
 	<li>Забраць тавар можна па <a href="https://falanster.by/be/kantakt" target="_blank">адрасе</a>: Мінск, вул. Захарава 77а, пам 2б.</li>
-	<li>Звычайна мы працуем па серадах з 17 да 21.</li>
+	<li>Зараз мы працуем па пятніцах з 17 да 21.</li>
 	<li>Магчыма таксама дастаўка напрацягу 2-3 дзён праз кур'ера, кошт 4 рублі.</li>	
 </ol>
 
