--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCaptcha&render=explicit" async defer></script>
+	
 </head>
 
 <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
@@ -133,7 +134,13 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
-                        <br>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12">
+                                <label for="captcha_container"></label>
+                                <div id="captcha_container"></div>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
@@ -198,7 +205,9 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
     <script src="js/jqBootstrapValidation.js"></script> 
+    <script src="mail/site_config.php"></script>
     <script src="js/custom.js"></script>
+    <script src="js/contact.js"></script>
 
 </body>
 
