--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 						        <h3>Замаўляй!</h3>
 					</div>  
 			<div class="progress">
-			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 81%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="200">
-				81%
+			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 99%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="200">
+				99%
 			  </div>
 			</div>
                 </div>
@@ -121,6 +121,56 @@
                     <small>тавараў лаўкі</small>
                 </h2>
             </div>
+        </div>
+        <!-- /.row -->
+
+       	<!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">3 р</h3>
+                                <h3><a href="product-18.html">Налепкі са слімакамі</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-18.html"><img class="img-responsive" src="images/products/pr18/slimaki_cover_2_mini.JPG" alt=""></a>
+	            <div class="text1"><p>3 руб.</p></div>
+                </div>
+
+            </div>
+
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-16.html">DIY-цішоткі pacman</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-16.html"><img class="img-responsive" src="images/products/pr16/packman_13_cover.JPG" alt=""></a>
+		    <div class="text1"><p>35 руб.</p></div>
+                </div>
+
+            </div>
+
+  
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-17.html">DIY-цішоткі з бубамі </a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">
+                    <a href="product-17.html"><img class="img-responsive" src="images/products/pr17/buby_1_10_mini_cover.JPG" alt=""></a>
+		    <div class="text1"><p>35 руб.</p></div>
+                </div>
+
+            </div>
+
         </div>
         <!-- /.row -->
 
