added to last products

--- a/product-16.html
+++ b/product-16.html
@@ -109,8 +109,9 @@
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Як звычайна: лепей прыглядзець для сябе памерчык загаддзя і насіць да дыр. Як бачна на фота, можна і зімой =)</li>
+			<li>Як звычайна: лепей прыглядзець для сябе памер загаддзя і насіць да дыр. Як бачна на фота, можна і зімой =)</li>
 			<li>Не чакаць лета. Набыць на памер болей і насіць паверх шфэдара. Часам гэта можа выглядаць даволі няшна.</li>
+			<li>Можна набыць сябру на дзень народзінаў, або прафесійнае гік-свята.</li>
 		</ul>
 
 		<p> Памер і колер цішоткі: пазначайце ў замове. Есць памеры: 44 (ж), 48 (м)</p>
