--- a/product-18.html
+++ b/product-18.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, налепкі, слімакі, наклейки, улитки, наклейки на ноутбук">
+    <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, налепкі, слімакі, наклейки, улитки, наклейки на ноутбук, вікі, смоўж, віпедыя, налепкі на ноўтбук">
 
     <title>Гік-лаўка - Вікі-паштоўкі</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
@@ -104,11 +104,12 @@
 		<h4><a href="https://github.com/Wikification/swag/tree/master/nalepki/letnik_2017" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Клеіць на ноўт, ці ліпіць на магніт. </li>
-			<li>Дарыце сваім незвычайным сябрам, і распавядайце ім пра беларускую Вікіпедыю.</li>
+			<li>Клеіць на ноўт, мабільнік або тэчку.</li>
+			<li>Зрабіць магніт.</li>
+			<li>Падарыць сваім незвычайным сябрам, і распавесці ім пра беларускую Вікіпедыю.</li>
 		</ul>
 		
-		<p> Памер паштоўкі: 6,5 см у даўжыню </p>
+		<p> Памер налепкі: 65 мм у даўжыню</p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
