--- a/product-13.html
+++ b/product-13.html
@@ -99,18 +99,18 @@
 		<h3>Гісторыя і апісанне</h3>
               
 
-<p>DIY-цішотка "Space Invader" або цішоткі з касмічнымі захопнікамі прысвечаны васьмі бітнай <a href="http://www.pacxon4u.com/space-invaders/">гульні</a>. Мем стаў шырока распаўсюджаны сярод рэтра гульнявых гікаў па ўсяму свету.</p>
+<p>DIY-цішоткi "Space Invader" або цішоткі з касмічнымі захопнікамі прысвечаны васьмібітнай <a href="http://www.pacxon4u.com/space-invaders/">гульні</a>. Мем стаў шырока распаўсюджаным сярод рэтра-гульнявых гікаў па ўсiм свеце.</p>
 
-<p>На наш погляд касмічныя госці могуць несці не толькі двіжуху на клавіятуры, але цікавыя мэссэджы: be different, for free software і іншыя. Зараз вы можаце замовіць цішоткі белага і чорнага колера з надпісамі і колерамі, як на выявах.</p>
+<p>На наш погляд, касмічныя госці могуць несці не толькі двіжуху на клавіятуры, але і цікавыя мэссэджы: be different, for free software і іншыя. Зараз вы можаце замовіць цішоткі белага і чорнага колераў з надпісамі і колерамі, як на выявах.</p>
 
 <h4><a href="https://github.com/rizomaa/prints/blob/master/space-invader-for-free-software-2.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> або <a href="https://github.com/rizomaa/prints/blob/master/space-invader-be-different.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі 2</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Як звычайна: лепей прыглядзець для сябе памерчык і насіць да дыр.</li>
-			<li>Не чакаць лета. Набыць на памер болей і насіць паверх шфэдара. Трохі трэшавата можа выглядаць, але гікам можна.</li>
-			<li>Калі вы пагуляеце ў саму гулню  http://www.pacxon4u.com/space-invaders/ магчыма зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі.</li>
+			<li>Як звычайна - прыглядзець для сябе памерчык і насіць да дыр.</li>
+			<li>Не чакаць лета, набыць на памер болей і насіць паверх шфэдара. Трохі трэшавата, але гікам можна.</li>
+			<li>Калі вы пагуляеце ў саму гульню  http://www.pacxon4u.com/space-invaders/ напэўна, зможаце дапоўніць малюнак большай двіжухай і сваімі фразамі.</li>
 		</ul>
 
 		<p> Памер і колер цішоткі: пазначайце ў замове. </p>
