add position:sticky for .product-info

--- a/product-1.html
+++ b/product-1.html
@@ -97,7 +97,7 @@
 		<p><img class="img-responsive" src="images/products/pr1/console_post_3.JPG" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Для шчыра закаханых у кансоль і open source.</p>
 		<p>Кансольныя паштоўкі паказваюць, што код і каманды - гэта інструменты змены свету і перш за ўсё сябе.</p>
