--- a/product-12.html
+++ b/product-12.html
@@ -97,7 +97,7 @@
 		<p><img class="img-responsive" src="images/products/pr12/znachka_3.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Гікі - гэта людзі, апантаныя пэўнай справай. Калі вы кінаман, камп'ютарны спецыяліст, заганяецеся па роварах, а, магчыма, прападаеце ў клубах гістарычнай рэканструкцыі, біялагічных доследаў і проста выдзяляеце шмат свайго часу нейкай справе, вы - гік.</p> 
 <p>Гэтыя значкі для вас, вашых сябраў, знаёмых. У камплекце з 2х значкаў ёсць зялёныя і малінавыя варыянты, або камбінацыя тых і другіх.</p>
