--- a/product-14.html
+++ b/product-14.html
@@ -94,7 +94,7 @@
 		<p><img class="img-responsive" src="images/products/pr14/hoodyman.gif" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
 
 <p>DIY "Space Invader" байка або байкі з касмічнымі захопнікамі прысвечаны <a href="http://www.pacxon4u.com/space-invaders/" target="_blank">гульні</a>.</p>
