--- a/product-15.html
+++ b/product-15.html
@@ -97,7 +97,7 @@
 		<p><img class="img-responsive" src="images/products/pr15/8bit_heart_v2_1.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
               
 
