--- a/product-16.html
+++ b/product-16.html
@@ -98,7 +98,7 @@
 		<p><img class="img-responsive" src="images/products/pr16/packman_18_mini.JPG" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
               
 
