--- a/product-18.html
+++ b/product-18.html
@@ -96,7 +96,7 @@
 		<p><img class="img-responsive" src="images/products/pr18/wiki_letnik_2017_mini.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Вікі-слімак - істота, якая стала сімвалам развіцця вікіпедыйнай супольнасці Беларусі. Супольнасць развіваецца пакрыху і паўзе. Разнакаляровыя варыянты сведчаць пра тое, што ўсе мы крыху па-свойму розныя.</p>
 		<p>Тут есць і фота з першага вікі-летніка у Беларусі, дзе вы можаце пабачыць банер з лагатыпам слімака.</p>
