--- a/product-2.html
+++ b/product-2.html
@@ -97,7 +97,7 @@
 		<p><img class="img-responsive" src="images/products/pr2/wiki_post_6.JPG" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Паштоўкі з выявамі Беларусі, зробленыя супольнасцю вікіпедыстаў. Падчас розных конкурсаў, якія ладзяць супольнасць.  Добры падарунак сваякам, сябрам з розных гарадоў і мястэчак, а таксама замежжа.</p>		
 		<h4><a href="https://github.com/svetit/2016-postcards-wiki-commons" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
