--- a/product-4.html
+++ b/product-4.html
@@ -95,7 +95,7 @@
 		<p><img class="img-responsive" src="images/products/pr4/cc_nalepki_4.JPG" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Налепкі-канструктар з выявамі ліцэнзіі Creative Commons на беларускай мове.</p>
 		<p>Гэты канструктар дае магчымасць лёгка растлумачыць усе віды ліцэнзіяў Creative Commons, а таскама прыцягнуць увагу да вашай індывідуальнасці</p>
