--- a/product-6.html
+++ b/product-6.html
@@ -100,7 +100,7 @@
 		<p><img class="img-responsive" src="images/products/pr6/mesh_6.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Налепкі для адмінаў, сецевікоў і супольнасцей за аўтаномны, незалежны інтэрнэт.</p>
 		<p>Яны ствараліся падчас нашых пілотных запускаў мэш-сеткі ў 2015 годзе. Але і зараз пасланнi сугучны каштоўнасцям, якія нясуць дэцэнтралізаваныя тэхналогіі.</p>
