--- a/product-8.html
+++ b/product-8.html
@@ -96,7 +96,7 @@
 		<p><img class="img-responsive" src="images/products/pr8/cc_sumki_4.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Класныя джутавыя гарадскія сумачкі для гіка з трафарэтамі ліцэнзій Creative Commons. З такімі сумачкамі можна хадзіць у краму, або проста пераносіць невялікія рэчы. Маем 4 розных колеры з надпісамі: "Хай будзе!", "За так", "Паўтарай!", "Не чапай!", "Спасылайся!"</p>
 		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
