--- a/product-10.html
+++ b/product-10.html
@@ -96,7 +96,7 @@
 		<p><img class="img-responsive" src="images/products/pr10/geek_shirt_2.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Цішоткі гікаўскія - працяг нашых эксперыментаў з кансоллю. Зараз у калекцыі класічныя DIY-цішоткі чорнага або белага колеру з надпісамі "Geek commit_". </p>
 		<p>Самі надпісы нарадзіліся падчас нашай працы над айцішнымі праектамі і працай з тэзналогіяй git. Але пасля мы зразумелі, што гэтыя каміты маюць таксама сацыяльнае, грамадскае значэнне. Бо код - гэта закон, а творчасць гікаў - гэта абавязак яго трымацца.</p>
