--- a/product-11.html
+++ b/product-11.html
@@ -96,7 +96,7 @@
 		<p><img class="img-responsive" src="images/products/pr11/f_poster_4.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Гэта першы выпуск плакатаў каманды Фаланстэра. Кожны плакат - наша прызма ўспрымання свету і адлюстраванне нейкай каштоўнасці. Калі вы падзяляеце падобныя прынцыпы або паводзіны, значыць гэтыя плакаты для вас.</p>
 		<h4><a href="https://github.com/svetit/2017-posters-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
