--- a/product-13.html
+++ b/product-13.html
@@ -95,7 +95,7 @@
 		<p><img class="img-responsive" src="images/products/pr13/space_invader_4.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
               
 
