--- a/product-17.html
+++ b/product-17.html
@@ -101,7 +101,7 @@
 		<p><img class="img-responsive" src="images/products/pr17/buby_2_17_mini.JPG" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
               
 
