--- a/product-7.html
+++ b/product-7.html
@@ -98,7 +98,7 @@
 		<p><img class="img-responsive" src="images/products/pr7/rovar_8.JPG" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Гэтыя налепкі мы стварылі падчас падрыхтоўкі брашуры "Дапаможнік Раварыста". Яны заклікаюць змяняць правілы. Добра падыходзяць, каб наляпіць на ноўтбук або ровар. Устойлівыя да вільгаці і трымаюцца на корпусе ноўта або роварнай раме.</p>
 		<h4><a href="https://github.com/rovar/dapamozhnik-2-stickers" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
