--- a/product-9.html
+++ b/product-9.html
@@ -98,7 +98,7 @@
 		<p><img class="img-responsive" src="images/products/pr9/pi_poster_6.jpg" alt=""></p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Ідэя пірацкіх плакатаў нарадзілася ў 2013 годзе, калі мы ўсвядомілі важнасць захавання прыватнасці, свабоднага цыркулявання ведаў і іншыя выклікі лічбавай эпохi. Выстава плакатаў адбывалася на базе Фаланстэра, а таксама ў месцах правядзення мерапрыемстваў. Плакаты напоўнены рознымі слоганамі, такiмi як "Вернем права аўтару", "Чысці кэш браўзера", "Пераможам капірайт" і іншымi. Зараз вы можаце набыць сабе падобны плакат.</p>
 		<h4><a href="https://github.com/svetit/2014-2017-posters-pirates-campaign/tree/master/posters_by" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
