added workshops pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, тавары для гіка, нэрда, айцішніка: налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons, цішоткі">
     <meta name="author" content="">
 
-    <title>Гік-лаўка. Тавары для гіка ад супольнасці Фаланстэра</title>
+    <title>Гік-лаўка. Тавары і майстар-класы для гіка ад супольнасці Фаланстэра</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -58,6 +58,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="about.html">Пра нас</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="workshops.html">Майстар-класы</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
