fixed workshops pages and linked to main menu

--- a/product-15.html
+++ b/product-15.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="workshops.html">Майстар-класы</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                 </ul>
@@ -105,7 +108,7 @@
 
 <p>Што ж лічыцца свабоднымі праграмамі? Па-першае, такія праграмы можна свабодна устанаўліваць і карыстацца. Па-другое, вы можаце іх даследваць і змяняць без перашкод. Па-трэцяе, кожны асобнік свабоднай праграмы можна распаўсюджваць як заўгодна, ў тым ліку і за грошы. І па-чацвёртае, вы можаце распаўсюджваць змененую праграму.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/blob/master/free-software-use.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>Зыходнікі</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/blob/master/free-software-use.svg" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
