--- a/product-16.html
+++ b/product-16.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="workshops.html">Майстар-класы</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                 </ul>
@@ -104,7 +107,7 @@
 
 <p>Pacman - 8-мі бітная гульня, якая стваралася на зарэ развіцця камп'ютараў і палюбілася многім. Зараз васьмібітная культура з'яўляецца сваеасаблівым помнікам таго часу. Мы любім ігру pacman, і ў свабодны час спрабуем прасунуцца на наступны ўзровень.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/tree/master/packman" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>Зыходнікі</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/tree/master/packman" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
