--- a/product-17.html
+++ b/product-17.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="workshops.html">Майстар-класы</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                 </ul>
@@ -107,7 +110,7 @@
 
 <p>Pacman - адна з найпершых васьмібітных гульняў, якая пакарыла свет. За пэкмэнам ганяецца 4 істоты: Пінкі, Інкі, Блінкі і Клайд. Мы стварылі лінейку цішотак з імі.</p>
 
-<h4><a href="https://github.com/rizomaa/prints/tree/master/packman" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>Зыходнікі</a> + шрыфт Joystik</h4>
+<h4><a href="https://github.com/rizomaa/prints/tree/master/packman" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a> + шрыфт Joystik</h4>
 
 		
 		<h3 class="vodst-up-30">Як прымяняць</h3>
