--- a/workshop-1.html
+++ b/workshop-1.html
@@ -92,10 +92,10 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/products/w1/mk_signs_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/w1/mk_signs_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/w1/mk_signs_3_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/w1/mk_signs_4_mini.JPG" alt=""></p>
+                <p><img class="img-responsive" src="images/workshops/w1/mk_signs_1_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_2_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_3_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w1/mk_signs_4_mini.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4 product-info">
@@ -110,7 +110,7 @@
 .</li>
 		</ul>
 
-		<p class="vodst-up-30 vodst-down-30">* Зарэгістравацца адчыніцца у новай укладцы па кнопцы ніжэй.</p>
+		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default">Удзельнічай</a>
 
             </div>
