--- a/workshops.html
+++ b/workshops.html
@@ -95,8 +95,8 @@
         <!-- Page Header -->
         <div class="row" id="shopping">
             <div class="col-lg-12">
-                <h2 class="page-header">Асартымент
-                    <small>тавараў лаўкі</small>
+                <h2 class="page-header">Дзе паўдзельнічаць
+                    <small>што мы можам</small>
                 </h2>
             </div>
         </div>
@@ -128,7 +128,7 @@
                 </div>                
 
                 <div class="img-prod-container">
-                    <a href="workshop-2.html"><img class="img-responsive" src="images/products/w2/mk_magnets_cover_mini.JPG" alt=""></a>
+                    <a href="workshop-2.html"><img class="img-responsive" src="images/workshops/w2/mk_magnets_cover_mini.JPG" alt=""></a>
 		    <div class="text1"><p>5 руб.</p></div>
                 </div>
 
