--- a/product-11.html
+++ b/product-11.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="workshops.html">Майстар-класы</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                 </ul>
