--- a/workshop-2.html
+++ b/workshop-2.html
@@ -92,9 +92,9 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/products/w2/mk_magnets_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/w2/mk_magnets_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/products/w2/mk_magnets_3_mini.JPG" alt=""></p>
+                <p><img class="img-responsive" src="images/workshops/w2/mk_magnets_1_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w2/mk_magnets_2_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w2/mk_magnets_3_mini.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4 product-info">
@@ -108,7 +108,7 @@
 			<li>Проста правесці час з іншымі гікамі і раскрыць тэхналогію магнітаробства.</li>
 		</ul>
 
-		<p class="vodst-up-30 vodst-down-30">* Зарэгістравацца адчыніцца ў новай укладцы па кнопцы ніжэй.</p>
+		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
 		<a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default">Удзельнічай</a>
 
             </div>
