add socnetwork button

--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                     <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
+                    <li>
+                        <a href="https://vk.com/geeklauka" class="socnetwork"><i class="fa fa-vk" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/geeklauka.by/" class="socnetwork"><i class="fa fa-facebook-f" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/geek_lauka/" class="socnetwork"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -515,22 +524,38 @@
 
 
 <div class="col-md-8">
-                    <ul class="nav navbar-nav navbar-right">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li>
-                        <a class="page-scroll" href="about.html">Пра нас</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="contact.html">Кантакт</a>
-                    </li>
-                </ul>
-                </div>
+     <ul class="nav navbar-nav navbar-right">
+          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+          <li>
+             <a class="page-scroll" href="about.html">Пра нас</a>
+          </li>
+          <li>
+             <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
+          </li>
+          <li>
+             <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
+          </li>
+	  <li>
+             <a class="page-scroll" href="contact.html">Кантакт</a>
+          </li>
+      </ul>
+</div>
+<div class="col-md-8 pull-right">
+     <ul class="pull-right nav navbar-nav socnetwork">
+          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+          <li>
+            <a href="https://vk.com/geeklauka"><i class="fa fa-vk" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/geeklauka.by/"><i class="fa fa-facebook-f" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/geek_lauka/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          </li>
+      </ul>
+</div>
+
+
             </div>
         </footer>
 
