add a link to subscription from contact page main menu

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                         <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#padpiska">Падпіска</a>
+                        <a class="page-scroll" href="index.html#padpiska">Падпіска</a>
                     </li>
                 </ul>
             </div>
