Sales block Podpiska=znizhka added to index and css

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 
-<!-- Donate block -->
+<!-- Donate block 
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -120,7 +120,20 @@
                 </div>
             </div>
         </div>
-<!-- END Donate block -->
+END Donate block -->
+
+<!-- Sale block -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+
+			<h2 class="page-header-2">Падпіска = Зніжка</h2>
+			<h2 class="page-header-3">Падпісвайцеся на штомесяцовую рассылку <a href="index.html#padpiska">тут</a>.</h2>
+               </div>
+            </div>
+        </div>
+<!-- END Sale block -->
+
     </header>
 
 <!-- Page Content -->
