move button to header

--- a/product-17.html
+++ b/product-17.html
@@ -77,16 +77,19 @@
 
 
         <!-- Portfolio Item Heading -->
-        <div class="row">
-            <div class="col-lg-12">
-<div class="caption-product">
-		<h1 class="pull-right">35 руб.</h1>
-                <h1 class="page-header">DIY-цішоткі з бубамі
-                </h1>
-</div>
+        <div class="row sticky-caption">
+            <div class="col-lg-8">
+                <div class="caption-product">
+                <h1 class="pull-right">35 руб.</h1>
+                    <h1 class="page-header">DIY-цішоткі з бубамі</h1>
+                </div>
+            </div>
+            <div class="col-lg-4 caption-button">
+                <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
         <!-- /.row -->
+        
 
         <!-- Portfolio Item Row -->
         <div class="row">
@@ -120,9 +123,8 @@
 		</ul>
 
 		<p> Памер і колер цішоткі: пазначайце ў замове. Есць памеры: 44-46 (ж), 48-50 (м)</p>
-		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
-		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
-
+		<p>* Замовіць тавар можна праз кантактную форму </p>		
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
             </div>
 
         </div>
