--- a/product-6.html
+++ b/product-6.html
@@ -78,14 +78,17 @@
 
 
         <!-- Portfolio Item Heading -->
-        <div class="row">
-            <div class="col-lg-12">
+        <div class="row sticky-caption">
+            <div class="col-lg-8">
 <div class="caption-product">
 		<h1 class="pull-right">3 руб.</h1>
                 <h1 class="page-header">Мэш-налепкі 
 		<small>кошт за камплект (5 штук)</small>
                 </h1>
 </div>
+            </div>
+            <div class="col-lg-4 caption-button">
+                <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
         <!-- /.row -->
@@ -117,7 +120,7 @@
 		<p> Памер налепкі: 5х5см </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
-		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
             </div>
 
         </div>
