--- a/workshop-2.html
+++ b/workshop-2.html
@@ -77,13 +77,16 @@
 
 
         <!-- Portfolio Item Heading -->
-        <div class="row">
-            <div class="col-lg-12">
+        <div class="row sticky-caption">
+            <div class="col-lg-8">
 <div class="caption-product">
 		<h1 class="pull-right">5 руб.</h1>
                 <h1 class="page-header">Майстар-клас "Вырабляем diy-магніты"
                 </h1>
 </div>
+            </div>
+            <div class="col-lg-4 caption-button">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default page-header">Удзельнічай</a>
             </div>
         </div>
         <!-- /.row -->
@@ -109,7 +112,7 @@
 		</ul>
 
 		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
-		<a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default">Удзельнічай</a>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLScBLwvIwBZ1J2sdEICP8DDNAxGi91Lb8_TmcwOlizvLIB7y9g/viewform" target="_blank" class="btn btn-lg btn-default hide-desktop">Удзельнічай</a>
 
             </div>
 
