--- a/product-11.html
+++ b/product-11.html
@@ -77,14 +77,17 @@
 
 
         <!-- Portfolio Item Heading -->
-        <div class="row">
-            <div class="col-lg-12">
+        <div class="row sticky-caption">
+            <div class="col-lg-8">
 <div class="caption-product">
 		<h1 class="pull-right">12 руб.</h1>
                 <h1 class="page-header">Плакаты ад Фур'е
 		<small>Адна штука</small>
                 </h1>
 </div>
+            </div>
+            <div class="col-lg-4 caption-button">
+                <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
         <!-- /.row -->
@@ -112,7 +115,7 @@
 		<p><strong>Памер плаката:</strong> А2 </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
-		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
             </div>
 
