--- a/product-13.html
+++ b/product-13.html
@@ -77,13 +77,16 @@
 
 
         <!-- Portfolio Item Heading -->
-        <div class="row">
-            <div class="col-lg-12">
+        <div class="row sticky-caption">
+            <div class="col-lg-8">
 <div class="caption-product">
 		<h1 class="pull-right">35 руб.</h1>
                 <h1 class="page-header">DIY-цішоткі Space Invader
                 </h1>
 </div>
+            </div>
+            <div class="col-lg-4 caption-button">
+                <a href="contact.html" class="btn btn-lg btn-default page-header">Замовіць тавар</a>
             </div>
         </div>
         <!-- /.row -->
@@ -118,7 +121,7 @@
 
 		<p> Памер і колер цішоткі: пазначайце ў замове. </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>		
-		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
+		<a href="contact.html" class="btn btn-lg btn-default hide-desktop">Замовіць тавар</a>
 
             </div>
 
