comma removed from description

--- a/product-11.html
+++ b/product-11.html
@@ -105,7 +105,7 @@
 		<h4><a href="https://github.com/svetit/2017-posters-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць:</h3>
 		<ul>
-			<li>Павесіць на сцяну, або падкласці пад аргшкло працоўнага стала.</li>
+			<li>Павесіць на сцяну або падкласці пад аргшкло працоўнага стала.</li>
 			<li>Падарыць сябрам, якія падзяляюць агульныя погляды.</li>
 			<li>Расшарыць самы прыгожы плакат у сябе на сцяне са спасылкай на Гік-лаўку.</li>
 		</ul>
