add footer template, change footer

--- a/about.html
+++ b/about.html
@@ -176,32 +176,34 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-          
-      <div class="col-md-4">
-		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
-</div>
-
-
-<div class="col-md-8">
+                <div class="col-md-4">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <p class="navbar-text">
+                                Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-8">
                     <ul class="nav navbar-nav navbar-right">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li>
-                        <a class="page-scroll" href="about.html">Пра нас</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
-                    </li>
-		    <li>
-                        <a class="page-scroll" href="contact.html">Кантакт</a>
-                    </li>
-                </ul>
+                        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                        <li>
+                            <a class="page-scroll" href="about.html">Пра нас</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="tos.html#Як мы працуем">Як мы працуем</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="contact.html">Кантакт</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
-
     </div>
     <!-- /.container -->
 
