--- a/index.html
+++ b/index.html
@@ -522,8 +522,14 @@
             <div class="row">
           
       <div class="col-md-4">
-		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
-</div>
+            <ul class="nav navbar-nav">
+                  <li>
+                        <p class="navbar-text">
+                                Гік-лаўка 2017 - <a class="navbar-link" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a>
+                        </p>
+                  </li>
+            </ul>		 
+      </div>
 
 
 <div class="col-md-8">
