--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ END Donate block -->
             <div class="row">
 
  <div class="col-lg-12">
-                    <p>Падпішыцеся! Мы будзем трымаць вас у курсе пра абнаўленні асартымента, зніжкі, акцыі і наогул жыццё нашай <a href="https://falanster.by" target="_blank">суполкі</a>. Рассылка адбываецца не часцей чым раз на месяц.</p>
+                    <p>Падпішыцеся! Мы будзем трымаць вас у курсе пра абнаўленні асартымента, зніжкі, акцыі і наогул жыццё нашай <a href="https://falanster.by" target="_blank">суполкі</a>. Рассылка адбываецца не часцей, чым раз на месяц.</p>
                 </div>
 
 
@@ -535,7 +535,7 @@ END Donate block -->
             <div class="row">
           
       <div class="col-md-4">
-		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
+		    <p>Гік-лаўка 2018 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
 </div>
 
 
