--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
   <li>Колькасць: 2 камплекты</li> 
   <li>Кантакт: г. Пінск, індэкс 222222, Першая вуліца, дом 1, кватэра 1</li> 
 </ol>
-Падрабязней чытайце <a href="tos.html" target="_blank">як мы працуем</a>.</li>
+Падрабязней чытайце, <a href="tos.html" target="_blank">як мы працуем</a>.</li>
 <li class="vodst-up-20"><strong>Адправіць паведамленне.</strong> Проста напішыце паведамленне</li>
 </ul>
 
