ethernet workshop added

--- a/workshop-3.html
+++ b/workshop-3.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="магніты на лядоўні, магнітныя гаманцы, магніты, магниты своими руками, diy-магниты адкрыты код, open source, shell, bash, linux, лінукс, беларускія магніты, магніты для айцішніка, для камп'ютаршчыка, для гіка, для нерда, на дзень народзінаў, на свята">
+    <meta name="description" content="майстар-клас, ethernet кабель, mesh, канэктары, хэндмэйд, коннекторы, хендмейд, мастер-клас, подарок для девушки программистки, падарунак для дзяўчыны праграмісткі, завушніцы, сережки, креатив, крэаціў, для гіка, для нерда, на дзень народзінаў, на свята">
 
-    <title>Гік-лаўка - Майстар-клас "Вырабляем diy-магніты"</title>
+    <title>Гік-лаўка - Майстар-клас "Ethernet нішцякі"</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -81,7 +81,7 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">5 руб.</h1>
-                <h1 class="page-header">Майстар-клас "Вырабляем diy-магніты"
+                <h1 class="page-header">Майстар-клас "Ethernet нішцякі"
                 </h1>
 </div>
             </div>
@@ -92,20 +92,22 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/workshops/w2/mk_magnets_1_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w2/mk_magnets_2_mini.JPG" alt=""></p>
-		<p><img class="img-responsive" src="images/workshops/w2/mk_magnets_3_mini.JPG" alt=""></p>
+                <p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_8_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_2_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_4_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_5_mini.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/workshops/w3/mesh_stuff_7_mini.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4 product-info">
 		<h3>Гісторыя і апісанне</h3>
-		<p> У гэтым майстар-класе мы дзелімся тэхналогіяй вытворчасці магнітаў. Удзельнікі могуць зрабіць магніты як са сваімі выявамі (падрыхтуйце налепкі) так і прапанаванымі камандай гік-лаўкі.</p>
+		<p> На майстар-класе мы ствараем упрыгожванні з ethernet кабелю. З дапамогой вітой пары і канэктараў можна стварыць аўтэнтычныя завушніцы, браслеты і нават сплесці пояс. Таксама можна ствараць іншыя вырабы, на якія хопіць фантазіі і кабелю.</p>
 
 		<h3 class="vodst-up-30">Як выкарыстаць далей</h3>
 		<ul>
-			<li>Нарэзаць магніцікаў пасля іх начапіць на лядоўню або дошку.</li>
-			<li>Зрабіць сабе, сябру гаманец для капеек.</li>
-			<li>Проста правесці час з іншымі гікамі і раскрыць тэхналогію магнітаробства.</li>
+			<li>Апранаць завушніцы на вечарыну для тэхнароў і праграмістаў. Яны дакладна зацэняць.</li>
+			<li>Насіць кулончык з канэктарам ад зглазу і кібер-атак у інтэрнэце. Разам з гэтым добра і паляпшаць свае веды пра сеткавую бяспеку.</li>
+			<li>Адчуць сябе крыху кабельшчыкам, які праводзіў у вас у хаце інтэрнэт і пранікнуцца павагай да гэтай прафесіі.</li>
 		</ul>
 
 		<p class="vodst-up-30 vodst-down-30">* Запісацца да ўдзелу па кнопцы ніжэй. Увага! Абірайце ў анкеце свой майстар-клас.</p>
